chore: move child endpoints from the ledger to below the ledger
